--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,7 @@
     "128": "favicon128.png"
   },
   "permissions": [
-    
+    "storage"
   ],
   "content_scripts": [
     {
@@ -24,7 +24,7 @@
   ],
   "web_accessible_resources": [
     {
-      "resources": [ "inject.js" ],
+      "resources": [ "inject.js", "2.5.3-crypto-sha1-hmac-pbkdf2-blockmodes-aes.js" ],
       "matches": [ "https://*.replit.com/*", "https://*.firewalledreplit.com/*" ]
     }
   ],
