--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -3,7 +3,7 @@
     "README.md"
   ],
   "imageSize": 100,
-  "commit": false,
+  "commit": true,
   "commitConvention": "angular",
   "contributors": [
     {
