--- a/manifest.json
+++ b/manifest.json
@@ -3,6 +3,8 @@
   "name": "XL Replit",
   "description": "Extra features for the Replit website.",
   "version": "1.1",
+  "version_name": "1.1",
+  "minimum_chrome_version": "105",
   "author": "LuisAFK",
   "icons": {
     "192": "favicon.png",
