--- a/manifest.json
+++ b/manifest.json
@@ -3,22 +3,16 @@
   "name": "XL Replit",
   "description": "Extra features for the Replit website.",
   "version": "1.1",
-  "version_name": "1.1",
   "minimum_chrome_version": "105",
   "author": "LuisAFK",
   "icons": {
     "192": "favicon.png",
     "128": "favicon128.png"
   },
-  "permissions": [
-    "storage"
-  ],
+  "permissions": ["storage", "activeTab", "scripting", "tabs"],
   "content_scripts": [
     {
-      "matches": [
-        "https://*.replit.com/*",
-        "https://*.firewalledreplit.com/*"
-      ],
+      "matches": ["https://*.replit.com/*", "https://*.firewalledreplit.com/*"],
       "css": ["content.css"],
       "js": ["content.js"],
       "run_at": "document_start"
@@ -26,8 +20,11 @@
   ],
   "web_accessible_resources": [
     {
-      "resources": [ "inject.js", "2.5.3-crypto-sha1-hmac-pbkdf2-blockmodes-aes.js" ],
-      "matches": [ "https://*.replit.com/*", "https://*.firewalledreplit.com/*" ]
+      "resources": [
+        "inject.js",
+        "2.5.3-crypto-sha1-hmac-pbkdf2-blockmodes-aes.js"
+      ],
+      "matches": ["https://*.replit.com/*", "https://*.firewalledreplit.com/*"]
     }
   ],
   "action": {
