--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "typescript": "^5.1.3"
   },
   "dependencies": {
-    "@replit/protocol": "^0.3.12"
+    "@replit/protocol": "^0.3.12",
+    "monaco-editor": "^0.39.0"
   }
 }
