Load RequireJS from NPM, remove from source control

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "@replit/protocol": "^0.3.12",
-    "monaco-editor": "^0.39.0"
+    "monaco-editor": "^0.39.0",
+    "requirejs": "^2.3.6"
   }
 }
