--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
   "scripts": {
     "_old_watch": "webpack --config webpack/webpack.dev.js --watch",
     "_old_build": "webpack --config webpack/webpack.prod.js",
-    "dev": "bash ./scripts/build.sh dev",
-    "build": "bash ./scripts/build.sh prod",
-    "dev:chrome": "bash ./scripts/build.sh dev chrome",
-    "build:chrome": "bash ./scripts/build.sh prod chrome",
-    "dev:firefox": "bash ./scripts/build.sh dev firefox",
-    "build:firefox": "bash ./scripts/build.sh prod firefox",
+    "dev": "zx ./scripts/build.mjs dev",
+    "build": "zx ./scripts/build.mjs prod",
+    "dev:chrome": "zx ./scripts/build.mjs dev chrome",
+    "build:chrome": "zx ./scripts/build.mjs prod chrome",
+    "dev:firefox": "zx ./scripts/build.mjs dev firefox",
+    "build:firefox": "zx ./scripts/build.mjs prod firefox",
     "clean": "rm -rf dist",
     "format": "npx prettier --write ."
   },
