--- a/.github/workflows/todo.yml
+++ b/.github/workflows/todo.yml
@@ -1,8 +1,15 @@
-name: Todo issues
-on: [push]
+name: Create issues from todos
+on:
+  push:
+    branches:
+     - master
 jobs:
-  Todo-issues:
+  todos:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v1
       - name: todo-actions
-        uses: dtinth/todo-actions@v0.2.0
+        uses: dtinth/todo-actions@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          TODO_ACTIONS_MONGO_URL: ${{ secrets.TODO_ACTIONS_MONGO_URL }}
