--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -6,3 +6,9 @@ jobs:
     steps:
       - name: TruffleHog OSS
         uses: trufflesecurity/trufflehog@v3.39.0
+  Todo-comments:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v1
+      - name: Code Todo Bot
+        uses: bilalshaikh42/todo@v0.0.1
