Fix GH action job name

--- a/.github/workflows/todo.yml
+++ b/.github/workflows/todo.yml
@@ -10,7 +10,7 @@ on:
         description: 'By default, the commit entered above is compared to the one directly before it; to go back further, enter an earlier SHA here'
         required: false
 jobs:
-  build:
+  todo-comments:
     runs-on: 'ubuntu-latest'
     steps:
       - uses: 'actions/checkout@v3'
