--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "@types/requirejs": "^2.1.34",
     "esbuild": "^0.18.1",
     "prettier": "^2.8.8",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "web-ext": "^7.6.2"
   },
   "dependencies": {
     "@replit/protocol": "^0.3.12",
