Fix extension ID

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -75,7 +75,7 @@
   },
   "browser_specific_settings": {
     "gecko": {
-      "id": "xl-replit"
+      "id": "xl-replit@lafkpages.tech"
     }
   }
 }
