--- a/src/manifest.json
+++ b/src/manifest.json
@@ -3,6 +3,7 @@
   "manifest_version": 3,
   "default_locale": "es",
   "name": "__MSG_name__",
+  "short_name": "__MSG_name__",
   "description": "__MSG_description__",
   "version": "1.1",
   "minimum_chrome_version": "105",
