--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "chrome",
     "firefox",
     "browser",
-    "extension"
+    "extension",
+    "addon"
   ],
   "author": "LuisAFK",
   "scripts": {
