--- a/package.json
+++ b/package.json
@@ -30,10 +30,15 @@
     "url": "https://github.com/lafkpages/XL-Replit.git"
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^25.0.1",
+    "@rollup/plugin-node-resolve": "^15.1.0",
+    "@rollup/plugin-typescript": "^11.1.1",
     "@types/chrome": "^0.0.237",
     "@types/requirejs": "^2.1.34",
     "esbuild": "^0.18.1",
     "prettier": "^2.8.8",
+    "rollup-plugin-esbuild": "^5.0.0",
+    "tslib": "^2.5.3",
     "typescript": "^5.1.3",
     "web-ext": "^7.6.2"
   },
@@ -43,6 +48,7 @@
     "requirejs": "^2.3.6"
   },
   "peerDependencies": {
+    "rollup": "^3.25.1",
     "zx": "^7.2.2"
   }
 }
