--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,11 +2,12 @@
   "compilerOptions": {
     "lib": ["DOM", "ES2022"],
     "strict": true,
-    "module": "es6",
+    "module": "UMD",
     "moduleResolution": "node",
     "target": "es6",
     "sourceMap": false,
     "rootDir": "src",
+    "outDir": "dist/js",
     "typeRoots": ["node_modules/@types"],
     "types": ["requirejs", "chrome"]
   }
