--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "devDependencies": {
     "@types/chrome": "^0.0.237",
     "@types/requirejs": "^2.1.34",
+    "@types/uglify-js": "^3.17.1",
     "esbuild": "^0.18.1",
     "prettier": "^2.8.8",
     "typescript": "^5.1.3",
@@ -40,7 +41,8 @@
   "dependencies": {
     "@replit/protocol": "^0.3.12",
     "monaco-editor": "^0.39.0",
-    "requirejs": "^2.3.6"
+    "requirejs": "^2.3.6",
+    "uglify-js": "^3.17.4"
   },
   "peerDependencies": {
     "zx": "^7.2.2"
