--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "url": "https://github.com/lafkpages/XL-Replit.git"
   },
   "devDependencies": {
+    "@sentry/browser": "^7.55.2",
     "@types/chrome": "^0.0.237",
     "@types/requirejs": "^2.1.34",
     "@types/uglify-js": "^3.17.1",
