--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@replit/protocol": "^0.3.12",
     "monaco-editor": "^0.39.0",
     "next": "^13.5.2",
+    "replit-ext-helper": "^0.0.6",
     "requirejs": "^2.3.6",
     "uglify-js": "^3.17.4"
   },
